Complete-Python-Mastery/1-Getting Started/wrap.txt
*** 1- What is Python ***
Why Python:
Solve complex problems in less time with fewer lines of code.

example let`s say we want ti extract the 3 first char of "Hello World"
C#
-------------------code----------------------
str.Substring(0, 3)
-------------------code----------------------

javaScript
-------------------code----------------------
str.substr(0, 3)
-------------------code----------------------

Python
-------------------code----------------------
str[0:3]
-------------------code----------------------

Python is multi-purpose language it can use for:
Data Analysis
Al / ML
Automation
Web Apps
Mobile Apps
Desktop Apps
Testing
Hacking

reason to make Python high desirable language
High-level: don't have to worry about memory management as C++.
Huge Community: where ever get stuck we can find the solution on the net.
Cross-platform: can run on windows and mac and linux.
Large Ecosystem: have large eco system of library and frameworks and tools.
it create more than 20 years.

we have two versions in Python2 and Python3
Python2 is outdated in 2020.
in our course we will work with Python3

*** 2- Installing Python ***

from this site we download it
-------------------code----------------------
http://python.org
-------------------code----------------------

- after download to check the version
-------------------code----------------------
python3 --version
-------------------code----------------------


*** 3- Python Interpreter ***
in the CMD when type Python3 and press enter we can see what we call Interpreter
-------------------code----------------------
$ python3
Python 3.12.0 (v3.12.0:0fb18b02c8, Oct  2 2023, 09:45:56) [Clang 13.0.0 (clang-1300.0.29.30)] on darwin
Type "help", "copyright", "credits" or "license" for more information.
>>>
-------------------code----------------------

Python Interpreter: is a program that execute python code

we can write an expression inside it.
in programming an expression means: piece of code that introduce a value  
-------------------code----------------------
>>> 2 + 2
4
-------------------code----------------------

in programming we have what we called "syntax error"
syntax Error: in programming syntax means grammar, so just like we have 
the concept of grammar in the language we speak we have the exact same concept
in programming
-------------------code----------------------
>>> 2 >
  File "<stdin>", line 1
    2 >
        ^
SyntaxError: invalid syntax
-------------------code----------------------

- Python Interpreter is good opportunity to quickly experiment a piece of code
and when working with real world application we need a Code editor
